--- a/pt/index.html
+++ b/pt/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gustavo Muzeka</title>
     <link rel="preconnect" href="https://rsms.me/">
+    <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="lg:flex bg-slate-900"  >
-    
+<body class="lg:flex bg-slate-900">
     <div class="max-sm:hidden sm:hidden  lg:block fixed pointer-events-none -z-10 top-0 left-0 glow inset-0 transition duration-300" style="background: radial-gradient(600px at 635px 262px, rgba(29, 78, 216, 0.3), transparent 80%);"></div>
     <section>
         <div id="sidebar" class="lg:fixed lg:w-2/4 lg:h-screen p-16 lg:p-0 w-100 flex flex-col justify-center items-center">
